--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -41,13 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB\Friendship.cs" />
+    <Compile Include="DB\Message.cs" />
     <Compile Include="DB\Role.cs" />
     <Compile Include="DB\User.cs" />
+    <Compile Include="DTO\LoginModel.cs" />
+    <Compile Include="DTO\SearchedUserDTO.cs" />
+    <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DTO\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
